--- a/html/components/component_input_toggle.html
+++ b/html/components/component_input_toggle.html
@@ -76,7 +76,7 @@
 
 		<div class="ui-guide-section">
 			<div class="ui-guide-box">
-				<h2>Text Position</h2>
+				<h2>Text Position <span>Checkbox</span></h2>
 				<dl>
 					<dt></dt>
 					<dd>
@@ -102,6 +102,21 @@
 								<input type="checkbox">
 								<span class="label-title">레이블</span>
 							</label>
+						</div>
+					</dd>
+				</dl>
+			</div>
+
+			<hr>
+
+			<div class="ui-guide-box">
+				<h2> <span>Radio</span></h2>
+				<dl>
+					<dt></dt>
+					<dd>
+						<div class="inp inp-toggle-text">
+							<input type="radio" name="toggle" aria-label="오전">
+							<input type="radio" name="toggle" aria-label="오후">
 						</div>
 					</dd>
 				</dl>
