--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -271,6 +271,8 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 .modal__container {padding:0;max-width:none;max-height:calc(100% - 40px);flex:1 1 100%;background-color:var(--white-100);border-radius:20px 20px 0 0;display:flex;flex-direction:column;}
 .modal__content {margin:0;line-height:inherit;color:inherit;padding:0;border-radius:0;flex:1 1 calc(100% - 56px);overflow-y:auto;}
 
+.micromodal-content .modal__overlay {background-color:transparent;}
+
 .modal__header {position:sticky;top:0;left:0;width:100%;padding:14.5px 16px;background-color:var(--white-100);border-radius:20px 20px 0 0;}
 .modal__header__alert {padding:24px 24px 8px;min-height:40px;gap:10px;}
 .modal__header .modal__title {flex:1 1 100%;display:flex;justify-content:center;min-height:30px;}
@@ -364,7 +366,7 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 
 
 /* datepicker-wrap */
-.datepicker-wrap {padding-bottom:48px;}
+.datepicker-wrap {}
 .datepicker-wrap .ui-widget.ui-widget-content {border:0;background-color:var(--white-100);color:var(--typography-black);border-radius:0;font-family:inherit;font-size:inherit;width:auto;padding:16px 0 0;height:425px;position:relative;overflow:hidden;}
 .datepicker-wrap .ui-datepicker .ui-datepicker-header {padding:0;border-radius:0;border:0;background-color:var(--white-100);margin-bottom:20px;font-size:26px;font-weight:500;color:var(--typography-black);}
 .datepicker-wrap .ui-datepicker .ui-datepicker-prev,
