--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -490,6 +490,36 @@
 					<i class="icon-only icon-12 icon-calendar-repeat"></i>
 				</div>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-add</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-add bg-icon-default"></i>
+					<i class="icon-only icon-36 icon-add bg-icon-default"></i>
+					<i class="icon-only icon-32 icon-add bg-icon-default"></i>
+					<i class="icon-only icon-28 icon-add bg-icon-default"></i>
+					<i class="icon-only icon-24 icon-add bg-icon-default"></i>
+					<i class="icon-only icon-20 icon-add bg-icon-default"></i>
+					<i class="icon-only icon-16 icon-add bg-icon-default"></i>
+					<i class="icon-only icon-14 icon-add bg-icon-default"></i>
+					<i class="icon-only icon-12 icon-add bg-icon-default"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-user2</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-user2"></i>
+					<i class="icon-only icon-36 icon-user2"></i>
+					<i class="icon-only icon-32 icon-user2"></i>
+					<i class="icon-only icon-28 icon-user2"></i>
+					<i class="icon-only icon-24 icon-user2"></i>
+					<i class="icon-only icon-20 icon-user2"></i>
+					<i class="icon-only icon-16 icon-user2"></i>
+					<i class="icon-only icon-14 icon-user2"></i>
+					<i class="icon-only icon-12 icon-user2"></i>
+				</div>
+			</div>
 
 		</div>
 	</div>
