--- a/html/components/component_input_checkbox.html
+++ b/html/components/component_input_checkbox.html
@@ -176,7 +176,7 @@
 		</div>
 		<hr>
 		<div class="ui-guide-box">
-			<h2>Tab</h2>
+			<h2>Tnput Tab</h2>
 			<dl>
 				<dt>Three Tabs</dt>
 				<dd>
@@ -188,7 +188,7 @@
 				</dd>
 			</dl>
 			<dl>
-				<dt>Tabs</dt>
+				<dt>Tabs wrap</dt>
 				<dd>
 					<div class="inp inp-board">
 						<input type="checkbox" aria-label="텍스트">
@@ -200,6 +200,7 @@
 				</dd>
 			</dl>
 		</div>
+		<hr>
 		<div class="ui-guide-box">
 			<h2>Color Checkbox</h2>
 			<dl>
@@ -222,6 +223,44 @@
 							<label>
 								<input type="checkbox" class="type-cyan">
 								<span class="label-title">수신 만기</span>
+							</label>
+						</div>
+					</div>
+				</dd>
+			</dl>
+		</div>
+
+		<hr>
+		<div class="ui-guide-box">
+			<h2>Inp Box</h2>
+			<dl>
+				<dt></dt>
+				<dd>
+					<div class="inp-box">
+						<div class="inp inp-medium">
+							<label>
+								<input type="checkbox">
+								<span class="label-title">
+									<span class="user">
+										<i class="icon-only icon-16 icon-user2"></i>
+										<span>김우리</span>
+										<span>부부장</span>
+									</span>
+									<span class="section">자산관리플랫폼부</span>
+								</span>
+							</label>
+						</div>
+						<div class="inp inp-medium">
+							<label>
+								<input type="checkbox">
+								<span class="label-title">
+									<span class="user">
+										<i class="icon-only icon-16 icon-user2"></i>
+										<span>김우리</span>
+										<span>부부장</span>
+									</span>
+									<span class="section">자산관리플랫폼부 자산관리플랫폼부</span>
+								</span>
 							</label>
 						</div>
 					</div>
