--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -231,9 +231,9 @@
 					<dd>
 						<div class="form">
 							<div class="label"></div>
-							<div class="input-wrap input-placeholder">
+							<div class="input-wrap input-placeholder input-inner-text">
 								<div class="visible-placeholder">매월 같은 날</div>
-								<input type="number" class="ar" placeholder="1" aria-label="반복주기" style="padding-right:0;">
+								<input type="number" class="ar" placeholder="1" aria-label="반복주기">
 								<div class="visible-placeholder">일에</div>
 							</div>
 						</div>
@@ -244,8 +244,8 @@
 					<dd>
 						<div class="form">
 							<div class="label"></div>
-							<div class="input-wrap input-placeholder">
-								<input type="number" class="ar" placeholder="1" aria-label="주" style="padding-right:0;">
+							<div class="input-wrap input-placeholder input-inner-text">
+								<input type="number" class="ar" placeholder="1" aria-label="주">
 								<div class="visible-placeholder">주마다</div>
 								<button type="button" class="text-button ar" data-placeholder="월"></button>
 								<div class="visible-placeholder">요일에 반복</div>
